--- a/application/public/css/index.css
+++ b/application/public/css/index.css
@@ -98,75 +98,33 @@ header h1 {
     text-decoration: none;
     color: inherit;
     margin: 0 10px;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .navbar a:hover {
     color: #ccc;
 }
 
+.videoContainer {
+    display: grid;
+    grid-template-areas: "mainContent";
 
+}
 
+#main_content {
+    grid-area: mainContent;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 250px;
+    gap: 2em;
+}
 
-.content {
-    background-color: #f9f9f9;
+.card-image {
     width: 100%;
     height: 100%;
-    padding: 15px 15px;
-    border-top: 1px solid #ddd;
-    overflow-y: scroll;
+    border-radius: .35rem;
 }
 
-.videos {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
-
-.video {
-    width: 270px;
-    margin-bottom: 30px;
-}
-
-.thumbnail {
-    width: 100%;
-    height: 170px;
-}
-
-.thumbnail img {
-    object-fit: cover;
-    height: 94%;
-    width: 100%;
-    border-radius: 10%;
-}
-
-.author img {
-    object-fit: cover;
-    border-radius: 50%;
-    height: 40px;
-    width: 40px;
-    margin-right: 10px;
-}
-
-.details {
-    display: flex;
-}
-
-.title {
-    display: flex;
-    flex-direction: column;
-}
-
-.title h3 {
-    color: whitesmoke;
-    line-height: 18px;
-    font-size: 14px;
-    margin-bottom: 6px;
-}
-
-.title a,
-span {
-    text-decoration: none;
-    color: rgb(96, 96, 96);
-    font-size: 12px;
+.card {
+    padding: 1.2em;
 }
