--- a/application/public/css/register.css
+++ b/application/public/css/register.css
@@ -88,16 +88,20 @@ header h1 {
     color: #ccc;
 }
 
+
 /* Style the grid layout containing forms */
 .container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-areas: "sideNav signUpForm errorHandle";
+}
+
+.signUp {
+    grid-area: signUpForm;
 }
 
 /* Style the forms and hide the sign-up form initially */
 form.signUpForm {
-    grid-column: 1 / 2;
-    grid-row: 1/2;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -188,4 +192,21 @@ a {
 
 .accountText {
     color: #f0f0f0;
+}
+
+
+#error-message {
+    color: #ff4136;
+    justify-content: center;
+    align-content: center;
+    height: min-content;
+}
+
+.error-handle {
+    display: grid;
+    grid-auto-flow: row;
+    justify-content: center;
+    align-content: center;
+    grid-area: errorHandle;
+    gap: 2em;
 }
