--- a/application/public/css/viewPost.css
+++ b/application/public/css/viewPost.css
@@ -12,81 +12,6 @@ body {
     color: white;
 }
 
-.topBar {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 10px;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-header a {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-header img {
-    width: 50px;
-    height: 50px;
-}
-
-header h1 {
-    font-size: 30px;
-    color: whitesmoke;
-    padding-top: 5px;
-}
-
-.searchKeyWords {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    grid-column: span 2;
-}
-
-.searchKeyWords input {
-    width: 300px;
-    height: 30px;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 15px;
-    border: none;
-    padding-left: 10px;
-    font-size: 16px;
-    color: white;
-    background-color: #333;
-    outline: none;
-}
-
-.searchKeyWords img {
-    width: 20px;
-    height: 20px;
-    margin-left: 10px;
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-around;
-    background-color: black;
-    color: white;
-    padding: 10px;
-}
-
-.navbar a {
-    text-decoration: none;
-    color: inherit;
-    margin: 0 10px;
-    font-size: 20px;
-}
-
-.navbar a:hover {
-    color: #ccc;
-}
-
 .playVideo {
     display: flex;
     justify-content: center;
@@ -96,7 +21,7 @@ header h1 {
     width: 100%;
 }
 
-.playVideo>img:nth-child(1) {
+#mainVideo {
     width: 95%;
     max-width: 100%;
     height: auto;
