--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,2 +1,4 @@
-<h1>{{title}}</h1>
-<p>Hello {{ name }},Welcome to {{title}}</p>
+<div class="videoContainer">
+  <main id="main_content">
+  </main>
+</div>
