--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
-    <link rel='stylesheet' href='/public/css/style.css' />
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+<head>
+  <title>{{title}}</title>
+  <link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">
+  <link rel="stylesheet" type="text/css" href="/public/css/index.css" />
+  <link rel="stylesheet" type="text/css" href="/public/css/DropDownAndProfile.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  {{#each CSS}}
+  <link rel="stylesheet" type="text/css" href="/public/css/{{this}}" />
+  {{/each}}
+  {{#each js}}
+  <script defer src="/public/js/{{this}}"></script>
+  {{/each}}
+  {{!--
+  <script defer src="/public/js/registration.js"></script> --}}
+  <script defer src="/public/js/frontend.js"></script>
+</head>
+
+<body>
+{{#if (nonEmptyObject messages)}}
+  {{> flashmessage this}}
+{{/if}}
+  <div class="topBar">
+    {{> header}}
+    {{> navbar}}
+  </div>
+  {{{body}}}
+</body>
+
 </html>
