--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,4 +1,7 @@
 <div class="videoContainer">
   <main id="main_content">
+    {{#each posts}}
+    {{> card this}}
+    {{/each}}
   </main>
 </div>
