--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -26,7 +26,7 @@
     </div>
     <div class="videoDescription">
       <p id="videoDescriptionFirstParagragh">2M Views</p>
-      <p>{{currentPost.created_at}}</p>
+      <p>{{formatDate currentPost.created_at}}</p>
       <p>Category: LifeStyle</p>
       <p>{{currentPost.description}}</p>
     </div>
