You can add comment now

--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -15,6 +15,7 @@
   {{!--
   <script defer src="/public/js/registration.js"></script> --}}
   <script defer src="/public/js/frontend.js"></script>
+  <script defer src="/public/js/viewpost.js"></script>
 </head>
 
 <body>
