--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -43,7 +43,9 @@
     </div>
   </div>
   <div class="commentList" id="commentList">
-    <!-- Comments will be dynamically added here -->
+    {{#each currentPost.comments}} 
+      {{> comment this}} 
+    {{/each}}
   </div>
 </div>
 
