Added validation back to registration

--- a/application/views/register.hbs
+++ b/application/views/register.hbs
@@ -12,11 +12,11 @@
       </div>
       <div class="inputField">
         <img src="/public/assets/icon/Lock.svg" alt="Lock">
-        <input type="text" placeholder="Password" name="password">
+        <input type="password" placeholder="Password" name="password">
       </div>
       <div class="inputField">
         <img src="/public/assets/icon/Lock.svg" alt="Lock">
-        <input type="text" placeholder=" Confirm Password" name="cpassword">
+        <input type="password" placeholder=" Confirm Password" name="cpassword">
       </div>
       <div class="inputFieldAge">
         <label for="age">Are you 13 years or older?</label>
