--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -12,8 +12,7 @@
   {{#each js}}
   <script defer src="/public/js/{{this}}"></script>
   {{/each}}
-  {{!--
-  <script defer src="/public/js/registration.js"></script> --}}
+  <script defer src="/public/js/registration.js"></script>
   <script defer src="/public/js/frontend.js"></script>
   <script defer src="/public/js/viewpost.js"></script>
 </head>
